--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-feather": "^1.1.2",
     "react-native-heroicons": "^3.2.0",
+    "react-native-paystack-webview": "^4.1.4",
     "react-native-ratings": "^8.1.0",
     "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.5.0",
@@ -38,6 +39,7 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.18.10",
+    "react-native-webview": "^13.10.3",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
