--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.29",
-    "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "~48.0.6",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.12.2",
+    "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +32,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-paystack-webview": "^4.1.4",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -39,7 +40,7 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.18.10",
-    "react-native-webview": "^13.10.3",
+    "react-native-webview": "^11.26.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
