--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-ui",
+  "name": "RestaurantApp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,37 +10,37 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.1.4",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/firestore": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~48.0.6",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.23",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^10.12.2",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "^5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.14",
+    "react-native": "^0.72.10",
     "react-native-animatable": "^1.3.3",
     "react-native-feather": "^1.1.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-paystack-webview": "^4.1.4",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-root-toast": "^3.6.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-star-rating": "^1.1.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.18.10",
-    "react-native-webview": "^11.26.0",
+    "react-native-web": "^0.19.12",
+    "react-native-webview": "^13.2.2",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
